--- a/GroupProject1/assets/style.css
+++ b/GroupProject1/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://cdn.pixabay.com/photo/2014/06/11/17/00/cook-366875_1280.jpg");
+    background-image: url("assets/images/background photo");
     background-repeat: inherit;
     font-family: 'Fredericka the Great', cursive;
 }
