--- a/GroupProject1/assets/style.css
+++ b/GroupProject1/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("assets/images/background photo.jpg");
+    background-image: url("images/background photo.jpg");
     background-repeat: inherit;
     font-family: 'Fredericka the Great', cursive;
 }
